--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="header-title">Fondamenti di design per il digitale</h1>
       </header>
 
-      <div class="div">
+      <div class="grid">
         <ul class="div-list">
           <li>
             <a  href="html/10Print_01.html" title="" target="_self">
